--- a/css/author.css
+++ b/css/author.css
@@ -209,135 +209,7 @@ p { margin: 0; }
 /* Blog articles section */
 
 .blog-articles {
-  position: relative; 
-  background-color: #15151857;
-  padding: 90px 110px 110px;
-  color: #FFFFFF;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.blog-articles-content {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-  max-width: 1216px;
-}
-
-.blog-articles-slider-wrapper {
-  display: none;
-}
-
-.blog-articles-info-block {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  gap: 32px;
-  margin-bottom: 80px;
-  margin-top: 64px;
-}
-
-.blog-articles-info-block-item {
-  display: flex;
-  flex-direction: column;
-  width: 384px;
-  border-radius: 24px;
-  cursor: pointer;
-  box-shadow: 0px 0px 68px 0px #0000000D inset,
-  0px 4px 4px 0px #0000000D inset;
-  background-color: #FFFFFF14;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  backdrop-filter: blur(48px);
-}
-
-.blog-articles-info-block-item:hover {
-  background-color: #0000003D;
-  box-shadow: 0px 10px 10px 0px #FFFFFF1A inset,
-  0px 10px 32px 0px #7AB8FF40;
-}
-
-.blog-articles-info-block-item img {
-  height: 280px;
-  border-radius: 24px;
-}
-
-.blog-articles-item-info-block {
-  padding: 24px;
-  gap: 24px;
-  display: flex;
-  flex-direction: column;
-}
-
-.blog-articles-item-date {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: right;
-}
-
-.blog-articles-item-info-text {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.blog-articles-item-question {
-  font-family: Unbounded;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22.32px;
-  color: #FFFFFF;
-}
-
-.blog-articles-item-answer {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  color: #FFFFFF;
-}
-
-.blog-articles-read-block {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.blog-articles-read-block p {
-  font-family: Unbounded;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24.8px;
-  color: rgba(122, 184, 255, 1);
-}
-
-.blog-articles-read-block img {
-  height: 64px;
-  width: auto;
-}
-
-.blog-articles-blue-block {
-  position: absolute;
-  width: 72px;
-  height: 72px;
-  border-radius: 12px;
-  background-color: #7AB8FF;
-  left: 0;
-  top: 30%;
-}
-
-.blog-articles-white-block {
-  position: absolute;
-  width: 26px;
-  height: 26px;
-  border-radius: 4px;
-  background-color: #E3EAF1;
-  right: 3%;
-  bottom: 17%;
+  padding: 90px 110px 110px !important;
 }
 
 @media (max-width: 1439px) and (min-width: 1280px) {
@@ -420,36 +292,7 @@ p { margin: 0; }
   /* Blog articles section */
 
   .blog-articles {
-    padding: 90px;
-  }
-
-  .blog-articles-item-info-block {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    padding: 24px;
-  }
-
-  .blog-articles-info-block-item img {
-    height: 240px;
-  }
-
-  .blog-articles-read-block img {
-    height: 64px;
-  }
-
-  .blog-articles-item-answer {
-    font-size: 17px;
-    line-height: 23px;
-  }
-
-  .blog-articles-blue-block {
-    width: 52px;
-    height: 52px;
-    border-radius: 8px;
-    left: 0;
-    top: 30%;
+    padding: 90px !important;
   }
 }
 
@@ -464,8 +307,6 @@ p { margin: 0; }
   .hero-navigation-text-block {
     left: 5%;
   }
-
-  /* Hero section */
 
   .hero {
     height: 65vh;
@@ -569,82 +410,7 @@ p { margin: 0; }
   /* Blog articles section */
 
   .blog-articles {
-    padding: 80px 70px;
-  }
-
-  .blog-articles-info-block {
-    gap: 24px;
-    margin-bottom: 40px;
-    margin-top: 32px;
-  }
-
-  .blog-articles-item-info-block {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    padding: 16px;
-  }
-
-  .blog-articles-info-block-item img {
-    height: 200px;
-  }
-  
-  .blog-articles-item-date {
-    font-size: 16px;
-    line-height: 19px;
-    margin: 0;
-  }
-
-  .blog-articles-item-answer {
-    font-size: 16px;
-    line-height: 19px;
-  }
-
-  .blog-articles-read-block img {
-    height: 36px;
-  }
-
-  .blog-articles-read-block {
-    align-items: center;
-  }
-
-  .blog-articles-read-block p {
-    font-size: 18px;
-  }
-
-  .slick-dots li {
-    width: 10px;
-    height: 5px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 6px;
-    transition: width 0.3s ease, background-color 0.3s ease;
-    padding: 0;
-    border: none;
-  }
-
-  .slick-dots li button:before {
-    content: none;
-  }
-
-  .slick-dots li.slick-active {
-    width: 60px;
-    background-color: rgba(122, 184, 255, 1);
-  }
-
-  .blog-articles-blue-block {
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    border-radius: 6px;
-    background-color: #7AB8FF;
-    left: 0;
-    top: 30%;
-  }
-
-  .blog-articles-white-block {
-    right: 2%;
-    bottom: 15%;
+    padding: 80px 70px !important;
   }
 }
 
@@ -797,116 +563,7 @@ p { margin: 0; }
   /* Blog articles section */
 
   .blog-articles {
-    padding: 91px 16px 64px;
-    text-align: center;
-  }
-
-  .blog-articles-info-block {
-    display: none;
-  }
-
-  .blog-articles-slider-wrapper {
-    position: relative;
-    display: block;
-    margin-top: 32px;
-  }
-
-  .blog-articles-cars-slider {
-    margin-bottom: 45px !important;
-  }
-
-  .blog-articles-cars-slider .slick-track {
-    min-height: 500px !important;
-  }
-
-  .slick-slide {
-    display: flex !important;
-    justify-content: center;
-    height: auto !important;
-  }
-
-  .blog-articles-cars-slider-block {
-    height: 500px;
-  }
-
-  .blog-articles-info-block-item {
-    min-width: 260px;
-    width: 50vw;
-  }
-
-  .blog-articles-info-block-item img {
-    height: 190px;
-    object-fit: cover;
-  }
-
-  .blog-articles-item-info-block {
-    padding: 16px;
-  }
-
-  .blog-articles-item-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .blog-articles-item-question {
-    font-size: 16px;
-    line-height: 19.84px;
-    min-height: 59px;
-  }
-  
-  .blog-articles-item-answer {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .blog-articles-read-block {
-    align-items: center;
-  }
-
-  .blog-articles-read-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-  
-  .blog-articles-read-block img {
-    height: 32px;
-    width: auto;
-  }
-
-  .slick-dots li {
-    width: 10px;
-    height: 5px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 6px;
-    transition: width 0.3s ease, background-color 0.3s ease;
-    padding: 0;
-    border: none;
-  }
-
-  .slick-dots li button:before {
-    content: none;
-  }
-
-  .slick-dots li.slick-active {
-    width: 60px;
-    background-color: rgba(122, 184, 255, 1);
-  }
-
-  .blog-articles-blue-block {
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    left: 1%;
-    top: unset;
-    bottom: -4%;
-  }
-  
-  .blog-articles-white-block {
-    width: 40px;
-    height: 40px;
-    right: 0%;
-    bottom: unset;
-    top: 3%;
+    padding: 91px 16px 64px !important;
   }
 }
 
@@ -1060,116 +717,6 @@ p { margin: 0; }
   /* Blog articles section */
 
   .blog-articles {
-    padding: 91px 16px 64px;
-    text-align: center;
-  }
-
-  .blog-articles-info-block {
-    display: none;
-  }
-
-  .blog-articles-slider-wrapper {
-    position: relative;
-    display: block;
-    margin-top: 32px;
-  }
-
-  .blog-articles-cars-slider {
-    margin-bottom: 45px !important;
-  }
-
-  .blog-articles-cars-slider .slick-track {
-    min-height: 500px !important;
-  }
-
-  .slick-slide {
-    display: flex !important;
-    justify-content: center;
-    height: auto !important;
-  }
-
-  .blog-articles-cars-slider-block {
-    height: 500px;
-  }
-
-  .blog-articles-info-block-item {
-    min-width: 260px;
-    width: 70vw;
-  }
-
-  .blog-articles-info-block-item img {
-    height: 190px;
-    object-fit: cover;
-  }
-
-  .blog-articles-item-info-block {
-    padding: 16px;
-    gap: 12px;
-  }
-
-  .blog-articles-item-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .blog-articles-item-question {
-    font-size: 16px;
-    line-height: 19.84px;
-    min-height: 59px;
-  }
-  
-  .blog-articles-item-answer {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .blog-articles-read-block {
-    align-items: center;
-  }
-
-  .blog-articles-read-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-  
-  .blog-articles-read-block img {
-    height: 32px;
-    width: auto;
-  }
-
-  .slick-dots li {
-    width: 10px;
-    height: 5px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 6px;
-    transition: width 0.3s ease, background-color 0.3s ease;
-    padding: 0;
-    border: none;
-  }
-
-  .slick-dots li button:before {
-    content: none;
-  }
-
-  .slick-dots li.slick-active {
-    width: 60px;
-    background-color: rgba(122, 184, 255, 1);
-  }
-
-  .blog-articles-blue-block {
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    left: 2%;
-    top: unset;
-    bottom: -4%;
-  }
-  
-  .blog-articles-white-block {
-    width: 40px;
-    height: 40px;
-    right: 0%;
-    bottom: unset;
-    top: 3%;
+    padding: 91px 16px 64px !important;
   }
 }
