--- a/css/vinnytsia.css
+++ b/css/vinnytsia.css
@@ -450,180 +450,6 @@ p { margin: 0; }
   text-align: left;
 }
 
-/* Repurchased cars section */
-
-.repurchased-cars {
-  position: relative; 
-  background-color: #15151857;
-  padding: 150px 110px 0px;
-  color: #FFFFFF;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.repurchased-cars-content {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-  max-width: 1216px;
-}
-
-.repurchased-cars-slider-wrapper {
-  position: relative;
-  display: block;
-}
-
-.repurchased-cars-slider-wrapper-mobile {
-  position: relative;
-  display: none;
-}
-
-.repurchased-cars-slider-block {
-  display: flex !important;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 26px;
-  margin-bottom: 80px;
-}
-
-.repurchased-cars-slider-block-item {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(122, 184, 255, 1);
-  border-radius: 32px;
-  cursor: pointer;
-}
-
-.repurchased-cars-slider-block-item img {
-  height: 288px;
-  width: 384px;
-  border-radius: 32px;
-}
-
-.repurchased-cars-image {
-  transition: transform 0.3s ease-in-out;
-}
-
-.repurchased-cars-image:hover {
-  transform: scale(1.1);
-}
-
-.repurchased-cars-info-block {
-  margin-top: 24px;
-  margin-bottom: 24px;
-  text-align: center;
-}
-
-.repurchased-cars-info-block p {
-  font-family: Unbounded;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22.32px;
-  color: rgba(0, 0, 0, 1);
-  margin: 0;
-}
-
-.repurchased-cars-info-block span {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: center;
-  color: rgba(0, 0, 0, 1);
-}
-
-.repurchased-cars-slider-nav-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.repurchased-cars-slider-nav-line {
-  height: 1px;
-  max-width: 945px;
-  width: 100%;
-  background-color: rgba(122, 184, 255, 1);
-}
-
-.repurchased-cars-slider-nav {
-  position: relative;
-  width: 144px;
-  display: flex;
-  flex-direction: row;
-  gap: 32px;
-  height: 56px;
-}
-
-.repurchased-cars-slider-nav button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  width: 56px;
-  height: 56px;
-  position: relative;
-}
-
-.repurchased-cars-slider-nav img {
-  width: 56px;
-  height: 56px;
-}
-
-.slick-next {
-  right: 0;
-}
-
-.slick-prev {
-  left: 0;
-}
-
-.slick-next:before {
-  content: none;
-}
-
-.slick-prev:before {
-  content: none;
-}
-
-.repurchased-cars-pagination {
-  display: flex;
-  max-width: 95px;
-  width: 100%;
-  height: 27px;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 24px;
-}
-
-.repurchased-cars-page p {
-  font-family: 'Unbounded';
-  font-weight: 500;
-  font-size: 22px;
-  line-height: 27.28px;
-  color: rgba(255, 255, 255, 1);
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin: 0;
-}
-
-.repurchased-cars-page.active p {
-  color: rgba(122, 184, 255, 1);
-}
-
-.slick-next img, .slick-prev img {
-  transition: filter 0.3s ease;
-  filter: none;
-}
-
-.slick-next.disabled img {
-  filter: brightness(0) saturate(100%) invert(70%);
-}
-
-.slick-prev.disabled img {
-  filter: none;
-}
-
 /* Cities section */
 
 .cities {
@@ -803,187 +629,7 @@ p { margin: 0; }
 /* Reviews section */
 
 .reviews {
-  position: relative; 
-  background-color: #15151857;
-  padding: 150px 110px 0;
-  color: #FFFFFF;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.reviews-content {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-  max-width: 1216px;
-}
-
-.reviews-info-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.reviews-info-item { 
-  display: flex;
-  flex-direction: column;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  border-bottom-color: #7AB8FF;
-  border-bottom-width: 2px;
-  border-bottom-style: solid;
-}
-
-.reviews-info-date {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: right;
-  margin: 0;
-}
-
-.reviews-info-review-block {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-.reviews-info-review-block p {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  color: rgba(255, 255, 255, 1);
-  max-width: 815px;
-  margin: 0;
-}
-
-.review-info-star-block {
-  display: flex;
-  flex-direction: column;
-  margin-right: 64px;
-  width: 151px;
-  text-align: center;
-}
-
-.review-info-star-block p {
-  font-family: Unbounded;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22.32px;
-  color: rgba(255, 255, 255, 1);
-  margin: 0;
-  margin-bottom: 8px;
-}
-
-.review-info-star-block img {
-  height: 22.5px;
-}
-
-.reviews-leave-review {
-  margin-top: 64px;
-  display: flex;
-  flex-direction: column;
-}
-
-.reviews-leave-review .h3 {
-  margin-bottom: 40px;
-}
-
-.reviews-leave-review-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.reviews-leave-review-inputs-block {
-  max-width: 903px;
-  width: 100%;
-}
-
-.reviews-leave-review-name-input-block {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.feedback-form {
-  max-width: 1000px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  margin-bottom: 40px;
-}
-
-.feedback-form-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.feedback-form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.feedback-form-group label span {
-  font-family: 'Montserrat';
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: center;
-}
-
-.feedback-form-group input,
-.feedback-form-group textarea {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 30px;
-  color: rgba(255, 255, 255, 1);
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 1);
-  border-radius: 12px;
-  padding: 18px;
-}
-
-.feedback-form-group input[type="text"],
-.feedback-form-group input[type="email"] {
-  width: 440px;
-  height: 49px;
-}
-
-.feedback-form-group textarea {
-  width: 903px;
-  height: 151px;
-  background: rgba(255, 255, 255, 0.04);
-}
-
-.feedback-form-group textarea::placeholder, input::placeholder {
-  color: rgba(255, 255, 255, 1);
-}
-
-.reviews-select-stars-mobile {
-  display: none;
-}
-
-.reviews-select-stars {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  height: min-content;
-  cursor: pointer;
-}
-
-.reviews-select-stars img {
-  height: 33px;
-  width: 33px;
+  padding: 150px 110px 0 !important;
 }
 
 /* Editor group section */
@@ -1195,18 +841,6 @@ p { margin: 0; }
     padding-bottom: 16px;
   }
 
-  /* Repurchased cars section */
-
-  .repurchased-cars-slider-block-item img {
-    height: 230px;
-    width: 307px;
-  }
-
-  .repurchased-cars-info-block span {
-    font-size: 17px;
-    line-height: 23px;
-  }
-
   /* Cities section */
 
   .cities-text-block {
@@ -1241,29 +875,11 @@ p { margin: 0; }
     width: 40px;
     height: 40px;
   }
-
+  
   /* Reviews section */
 
-  .reviews-info-review-block p {
-    font-size: 17px;
-    line-height: 23px;
-    max-width: 730px;
-  }
-
-  .feedback-form {
-    max-width: 800px;
-    gap: 32px;
-    margin: 0;
-    margin-bottom: 40px;
-  }
-  
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: 380px;
-  }
-
-  .feedback-form-group textarea {
-    width: 803px;
+  .reviews {
+    padding: 150px 110px 0 !important;
   }
 
   /* Buyback info section */
@@ -1480,35 +1096,6 @@ p { margin: 0; }
     line-height: 19px;
   }
 
-  /* Repurchased cars section */
-
-  .repurchased-cars {
-    padding: 80px 92px 0;
-  }
-
-  .repurchased-cars-slider-block {
-    justify-content: space-evenly;
-  }
-
-  .repurchased-cars-slider-block-item img {
-    height: 230px;
-    width: 307px;
-  }
-
-  .repurchased-cars-info-block {
-    margin-top: 16px;
-    margin-bottom: 16px;
-  }
-
-  .repurchased-cars-info-block p {
-    margin-bottom: 10px;
-  }
-
-  .repurchased-cars-info-block span {
-    font-size: 16px;
-    line-height: 19px;
-  }
-
   /* Cities section */
 
   .cities {
@@ -1564,41 +1151,7 @@ p { margin: 0; }
   /* Reviews section */
 
   .reviews {
-    padding: 50px 92px 0;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19px;
-    max-width: 520px;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19px;
-  }
-
-  .feedback-form {
-    max-width: 500px;
-    gap: 24px;
-    margin: 0;
-    margin-bottom: 40px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 180px;
-  }
-  
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: 300px;
-  }
-
-  .feedback-form-group textarea {
-    width: 500px;
+    padding: 50px 92px 0 !important;
   }
 
   /* Editor group section */
@@ -1991,84 +1544,6 @@ p { margin: 0; }
     line-height: 19.5px;
   }
 
-  /* Repurchased cars section */
-
-  .repurchased-cars {
-    padding: 60px 32px 0px;
-  }
-
-  .repurchased-cars-slider-wrapper {
-    position: relative;
-    display: none;
-  }
-  
-  .repurchased-cars-slider-wrapper-mobile {
-    display: block;
-  }
-
-  .slick-slide {
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .repurchased-cars-slider-block {
-    justify-content: center;
-    margin-bottom: 0;
-    flex-direction: row !important;
-  }
-
-  .repurchased-cars-slider-block-item {
-    width: auto;
-  }
-
-  .repurchased-cars-slider-block-item img {
-    height: 245px;
-    width: 300px;
-  }
-
-  .repurchased-cars-info-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-  
-  .repurchased-cars-info-block span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .repurchased-cars-slider-mobile .slick-slide:not(.slick-center) {
-    filter: blur(4px);
-    transition: filter 0.3s ease-in-out;
-  }
-
-  .repurchased-cars-slider-mobile .slick-center {
-    filter: none;
-  }
-
-  .slick-dots li {
-    width: 10px;
-    height: 5px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 6px;
-    transition: width 0.3s ease, background-color 0.3s ease;
-    padding: 0;
-    border: none;
-  }
-
-  .slick-dots li button:before {
-    content: none;
-  }
-
-  .slick-dots li.slick-active {
-    width: 60px;
-    background-color: rgba(122, 184, 255, 1);
-  }
-
-  .repurchased-cars-slider-mobile .slick-track {
-    min-height: 400px !important;
-  }
-
   /* Cities section */
 
   .cities {
@@ -2168,106 +1643,7 @@ p { margin: 0; }
   /* Reviews section */
 
   .reviews {
-    padding: 0 32px;
-  }
-
-  .reviews-content .h3 {
-    margin: 16px 0 0;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .reviews-info-review-block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .review-info-star-block {
-    margin-right: 0;
-    margin-bottom: 24px;
-    width: auto;
-    text-align: left;
-  }
-
-  .review-info-star-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-
-  .reviews-leave-review {
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .reviews-leave-review-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .reviews-select-stars {
-    display: none;
-  }
-
-  .reviews-select-stars-mobile {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: min-content;
-    margin-top: 32px;
-    margin-bottom: 16px;
-    cursor: pointer;
-  }
-
-  .reviews-select-stars-mobile img {
-    height: 33px;
-    width: 33px;
-  }
-
-  .feedback-form {
-    gap: 24px;
-    margin-bottom: 48px;
-    margin-top: 16px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 24px;
-  }
-
-  .feedback-form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-
-  .feedback-form-group label span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: auto;
-    height: 56px;
-  }
-
-  .feedback-form-group textarea {
-    width: auto;
-    height: 190px;
+    padding: 0 32px !important;
   }
 
   /* Editor group section */
@@ -2676,73 +2052,6 @@ p { margin: 0; }
     line-height: 19.5px;
   }
 
-  /* Repurchased cars section */
-
-  .repurchased-cars {
-    padding: 80px 16px 0;
-  }
-
-  .repurchased-cars-slider-wrapper {
-    position: relative;
-    display: none;
-  }
-  
-  .repurchased-cars-slider-wrapper-mobile {
-    display: block;
-  }
-
-  .repurchased-cars-slider-block {
-    justify-content: center;
-    margin-bottom: 0px;
-  }
-
-  .repurchased-cars-slider-block-item img {
-    height: 195px;
-    width: 260px;
-  }
-
-  .repurchased-cars-info-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-  
-  .repurchased-cars-info-block span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .repurchased-cars-slider-mobile .slick-slide:not(.slick-center) {
-    filter: blur(4px);
-    transition: filter 0.3s ease-in-out;
-  }
-
-  .repurchased-cars-slider-mobile .slick-center {
-    filter: none;
-  }
-
-  .slick-dots li {
-    width: 10px;
-    height: 5px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 6px;
-    transition: width 0.3s ease, background-color 0.3s ease;
-    padding: 0;
-    border: none;
-  }
-
-  .slick-dots li button:before {
-    content: none;
-  }
-
-  .slick-dots li.slick-active {
-    width: 60px;
-    background-color: rgba(122, 184, 255, 1);
-  }
-
-  .repurchased-cars-slider-mobile .slick-track {
-    min-height: 620px !important;
-  }
-
   /* Cities section */
 
   .cities {
@@ -2846,106 +2155,7 @@ p { margin: 0; }
   /* Reviews section */
 
   .reviews {
-    padding: 80px 16px 0;
-    text-align: start;
-  }
-
-  .reviews-content .h3 {
-    margin-bottom: 8px;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .reviews-info-review-block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .review-info-star-block {
-    margin-right: 0;
-    margin-bottom: 24px;
-    width: auto;
-    text-align: left;
-  }
-
-  .review-info-star-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-
-  .reviews-leave-review {
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .reviews-leave-review-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .reviews-select-stars {
-    display: none;
-  }
-
-  .reviews-select-stars-mobile {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: min-content;
-    margin-top: 32px;
-    margin-bottom: 16px;
-    cursor: pointer;
-  }
-
-  .reviews-select-stars-mobile img {
-    height: 33px;
-    width: 33px;
-  }
-
-  .feedback-form {
-    gap: 16px;
-    margin-bottom: 64px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 16px;
-  }
-
-  .feedback-form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-  
-  .feedback-form-group label span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: auto;
-    height: 56px;
-  }
-
-  .feedback-form-group textarea {
-    width: auto;
-    height: 190px;
+    padding: 80px 16px 0 !important;
   }
 
   /* Editor group section */
